--- a/_layouts/internetspeed_layout.html
+++ b/_layouts/internetspeed_layout.html
@@ -13,7 +13,7 @@ layout: default
     <h2 class="post-list-heading">{{ page.list_title | default: "" }}</h2>
     <ul class="post-list">
       {%- for post in site.posts -%}
-      {%- unless post.categories contains 'Internet-Speed' -%}
+      {%- if post.categories contains 'Internet-Speed' -%}
       <li>
         <!-- {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
         <span class="post-meta">{{ post.date | date: date_format }}</span> !-->
@@ -26,7 +26,7 @@ layout: default
           {{ post.excerpt }}
         {%- endif -%}
       </li>
-      {%- endunless -%}
+      {%- endif -%}
       {%- endfor -%}
     </ul>
 
