--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,6 @@
-<!-- <footer class="site-footer h-card">
+<footer class="site-footer h-card">
+  <img src="favicon.png" style="max-width: 20px; max-height: 20px;">
+  <!--
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
   <div class="wrapper">
@@ -31,7 +33,5 @@
     </div>
 
   </div>
-
+  -->
 </footer>
-
-!--> 
