--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -106,8 +106,9 @@
  * Site footer
  */
 .site-footer {
-  border-top: 1px solid $grey-color-light;
+  //border-top: 1px solid $grey-color-light;
   padding: $spacing-unit 0;
+  margin: 0 auto; 
 }
 
 .footer-heading {
